<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/text_user"

        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5" app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/fl_edtxt_user"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_height="wrap_content"

        android:hint="@string/hint_user"


        android:inputType="text"
        android:padding="10dp" android:autofillHints="true"/>


    <androidx.cardview.widget.CardView

        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"

            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_pass"
                android:descendantFocusability="blocksDescendants"
                android:ems="10"

                android:inputType="textPassword"
                android:padding="10dp" android:autofillHints="true"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/text_pass"

        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/fl_edtxt_user"
        app:layout_constraintTop_toBottomOf="@+id/fl_edtxt_user"/>

    <Button
        android:id="@+id/fl_btn_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/iniciar_sesion"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"/>


    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_forgot"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>