<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.cesarwillymc.movie.presentation.authentificacion.AuthViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.authentificacion.AuthFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_user"

            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6" app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.26"/>


        <EditText
            android:id="@+id/fl_edtxt_user"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_height="wrap_content"

            android:hint="@string/hint_user"
            app:errorText="@{viewModel.stateUser.UserEmpty?@string/login_string_empty_user:viewModel.stateUser.UserError?@string/login_string_error_user:@string/login_vacio}"
            android:onTextChanged="@{(word,b,c,d)->viewModel.updateTextUser(word)}"

            android:inputType="text"
            android:padding="10dp" android:autofillHints="true"/>


        <androidx.cardview.widget.CardView

            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardElevation="1dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorText="@{viewModel.statePass.PassEmpty?@string/login_string_empty_pass:viewModel.statePass.PassError?@string/login_string_error_pass:@string/login_vacio}"
                    android:onTextChanged="@{(word,b,c,d)->viewModel.updateTextPassUser(word)}"
                    android:descendantFocusability="blocksDescendants"
                    android:ems="10"

                    android:inputType="textPassword"
                    android:padding="10dp" android:autofillHints="true"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/text_pass"

            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/fl_edtxt_user"
            app:layout_constraintTop_toBottomOf="@+id/fl_edtxt_user"/>

        <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/cardView2">
            <include
                android:id="@+id/lbl_inicio_send"
                layout="@layout/view_button_next"
                app:buttonEnabled="@{viewModel.statePass.PassSucces &amp;&amp; viewModel.stateUser.UserSucces}"
                app:viewEnabled="@{!viewModel.stateLogin.loading}"/>
            <include
                android:id="@+id/lbl_inicio_loading"
                layout="@layout/view_loading"
                app:viewEnabled="@{viewModel.stateLogin.loading}"/>
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>